bundle-cat-lib/src/tests/snapshots/bundle_cat_lib__tests__ereport__ereport_list_by_part.snap
---
source: bundle-cat-lib/src/tests/ereport.rs
expression: "String::from_utf8_lossy(&part_out)"
---
PART       	SERIAL     	RESTART_ID                          	ENA      	CLASS
907-0000023	BRM03250000	550e8400-e29b-41d4-a716-446655440000	305419896	ereport.io.pci.device
