bundle-cat-lib/src/tests/snapshots/bundle_cat_lib__tests__ereport__ereport_list_by_serial.snap
---
source: bundle-cat-lib/src/tests/ereport.rs
expression: "String::from_utf8_lossy(&serial_out)"
---
PART       	SERIAL     	RESTART_ID                          	ENA       	CLASS
913-0000019	BRM09250001	660f9511-f3ac-52e5-b827-557766551111	2596069104	ereport.cpu.amd.bus_interconnect_error
